# vkwm

./: Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: qjmsdak7fhqc7pi922i2mgm45f7af9h8-source  y25hx3nrcap15sd41a9dp5dfpfvbkvs7-source
src/: main.rs
src/compositor/: mod.rs  protocols.rs  server.rs
src/renderer/: mod.rs  swapchain.rs  vulkan.rs
src/wm/: input.rs  layout.rs  mod.rs
