[package]
name = "vkwm"
version = "0.0.1"
edition = "2024"

[dependencies]
wayland-client = "0.31.8"
wayland-protocols = "0.32.6"
wayland-server = "0.31.7"
vulkanalia = { version = "0.28.0", features = ["libloading"] }
xkbcommon = "0.8.0"
log = "0.4.26"
env_logger = "0.11.7"

[[bin]]
name = "vkcomp"
path = "src/main.rs"

